# Sailing_Boats_Autopilot

./: .gitignore
build_code_block/: CMakeCache.txt  Makefile  Sailing_Boats_Controller.cbp  Sailing_Boats_Controller.layout  cmake_install.cmake
build_code_block/Sailing_Boat_Model/: Makefile  cmake_install.cmake
build_code_block/Visualizer/: Makefile  cmake_install.cmake
documentation/: fitting_polinomyal.C
resources/height_images/: PlayGround.ipynb
resources/satellite_photos/: links.txt
src/: CMakeLists.txt
src/Planning/: CMakeLists.txt  simple_maze.cpp  wind_and_islads.cpp
src/Sailing_Boat_Model/: CMakeLists.txt  model.cpp
src/Script/: Compile  Run_model_visualizer
src/Sockets/: SBA_socket.cpp
src/Utils/: ImportedModel.cpp  ImportedModel.h  Utils.h  sphere.cpp  texture_loading.cpp
src/Visualizer/: CMakeLists.txt  ImportedModel.cpp  Sail.mtl  Sail_Boat_Without_Sails.mtl  Utils.h  simple_vertShader.glsl  visualizer.cpp  world_visualizer.cpp
src/Visualizer/shaders/: simple_texture_fragShader.glsl  simple_texture_vertShader.glsl  texture_fragShader.glsl  texture_vertShader.glsl
